style: add  style class
adding the classy zeroSectionContact style in the Section.module.css file

--- a/client/src/components/Section/Section.module.css
+++ b/client/src/components/Section/Section.module.css
@@ -18,7 +18,7 @@ section p {
 }
 
 /* ZERO SECTION ABOUT */
-.zeroSectionAbout {
+.zeroSectionAbout,.zeroSectionContact{
   background: #060d27;
   display: flex;
   clip-path: polygon(
